[gd_scene load_steps=3 format=3 uid="uid://5mt2h32nvhfl"]

[ext_resource type="Script" path="res://shop.gd" id="1_0csnf"]
[ext_resource type="FontFile" uid="uid://dk5y4y3togj5c" path="res://PhysicsCarGameAssets/Milker.otf" id="2_inaq5"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0csnf")

[node name="Label" type="Label" parent="."]
offset_left = 612.0
offset_top = 41.0
offset_right = 763.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("2_inaq5")
theme_override_font_sizes/font_size = 50
text = "SHOP"

[node name="backButton" type="Button" parent="."]
offset_left = 611.0
offset_top = 139.0
offset_right = 771.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("2_inaq5")
theme_override_font_sizes/font_size = 24
text = "Main menu"

[node name="FuelTankButton" type="Button" parent="."]
offset_left = 609.0
offset_top = 215.0
offset_right = 1204.0
offset_bottom = 247.0
theme_override_fonts/font = ExtResource("2_inaq5")
theme_override_font_sizes/font_size = 24
text = "Upgrade Fuel Tank (Level 0) - 100 coins"

[node name="Label2" type="Label" parent="."]
offset_left = 20.0
offset_top = 15.0
offset_right = 107.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 24
text = "coins: 0"
